[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.140", features = ["derive"] }
sqlx-cli = { version = "0.6.0", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13.1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
